Google OAuth user saved to Db and Observability added